--- a/404.html
+++ b/404.html
@@ -16,12 +16,12 @@ $(function(){
 });
 </script>
 
-<section class="pageTop">
-  <p>
-    This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
-  </p>
-</section>
+<main>
+<p class="indent headerText">
+  This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
+</p>
 
 <h1>404 Page Not Found</h1>
+</main>
 </body>
 </html>
