--- a/byton.html
+++ b/byton.html
@@ -17,9 +17,9 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p>Tweaks on the visual assets of a startup electric car company to inject vibrance.<p>
-</section>
+<p class="indent headerText">
+  Tweaks on the visual assets of a startup electric car company to inject vibrance.
+<p>
 
 <h1>Byton</h1>
 
@@ -28,12 +28,9 @@
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
-<section>
-  <!-- write body text -->
-  <p class="text">
-  </p>
-</section>
-
+<!-- write body text -->
+<p class="indent bodyText">
+</p>
 </main>
 
 <div class="pageDivider"></div>
