--- a/chinese-grid.html
+++ b/chinese-grid.html
@@ -17,9 +17,9 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p>A geometric grid system which generates Simplified Chinese characters in both square and circular styles.<p>
-</section>
+<p class="indent headerText">
+  A geometric grid system which generates Simplified Chinese characters in both square and circular styles.
+</p>
 
 <h1>Chinese Grid</h1>
 <div class="iframeWrapper iframe60">
@@ -27,14 +27,13 @@
 </div>
 <h6 class="imgDescription">Click on the components to construt a figure of your choice and have two generated outcomes.</h6>
 
-<section>
-  <p class="text">
-    In terms of making a new Chinese font, traditionally designers have to construct and adjust each character manually with pre-designed basic strokes. Unlike English, where there are only limited number of alphabets and symbols, the vast number of Chinese characters require the character making process to be repeated for at least a few thousands, sometimes tens of thousands times.
-    <!-- add another paragraph to state the reason of making this system -->
-    <br>
-    The project aims at challenging the traditional method of Chinese type design with a systematic approach.
-  </p>
-</section>
+<p class="indent bodyText">
+  In terms of making a new Chinese font, traditionally designers have to construct and adjust each character manually with pre-designed basic strokes. Unlike English, where there are only limited number of alphabets and symbols, the vast number of Chinese characters require the character making process to be repeated for at least a few thousands, sometimes tens of thousands times.
+  <!-- add another paragraph to state the reason of making this system -->
+  <br>
+  The project aims at challenging the traditional method of Chinese type design with a systematic approach.
+</p>
+
 
 <img src="img/chinese-grid/grid.png" alt="Chinese Grid by Nora Zhao">
 <h6 class="imgDescription">Each point and line has its corresponding part in the system, which allows the simultaneous generation of a character in two styles.</h6>
