--- a/coordinate-converter.html
+++ b/coordinate-converter.html
@@ -17,20 +17,18 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p class="en">Exploration of pattern and movement thorough creative coding.<p>
-</section>
+<p class="indent headerText">
+  Exploration of pattern and movement thorough creative coding.
+<p>
 
 <h1>Coordinate Converter</h1>
 <img src="img/coordinate-converter/1-2s.jpg" alt="Coordinate Converter by Nora Zhao">
 
-<section>
-  <p class="text">
-    With creative code set up, the artboard coverts a coordinate of your mouse into a dot, a line or a shape. Having many of these elemts combined, the graphic output refelcts the track and speed of your movement.
-    <br>
-    The concept of time was injected into the body of an image. Unlike a traditional painting, which captures a certain point of time, it extends that point into a "line". Therefore, it records the "antecedently" and "subsequently", and becomes a video-like still image.
-  </p>
-</section>
+<p class="indent bodyText">
+  With creative code set up, the artboard coverts a coordinate of your mouse into a dot, a line or a shape. Having many of these elemts combined, the graphic output refelcts the track and speed of your movement.
+  <br>
+  The concept of time was injected into the body of an image. Unlike a traditional painting, which captures a certain point of time, it extends that point into a "line". Therefore, it records the "antecedently" and "subsequently", and becomes a video-like still image.
+</p>
 
 <div class="grid2 gridxto1">
   <div style="position:relative; padding-top:100%; overflow:auto; border:2px solid black;">
