--- a/glitch-room.html
+++ b/glitch-room.html
@@ -17,27 +17,24 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p>An interactive VR site which generates customised glitching patterns.<p>
-</section>
+<p class="indent headerText">
+  An interactive VR site which generates customised glitching patterns.
+</p>
 
 <h1>Glitch Room</h1>
-<!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
 <img src="img/glitch-room/1-6b.png" alt="Glitch Room by Nora Zhao">
 
 <h6 class="imgDescription">A model customisation page screenshot.</h6>
 
-<section>
-  <p class="text">
-    Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
-    <br>
-    The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
-    <br>
-    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
-    <br>
-    Link to the website: <a href="https://glitchroom.com">glitchroom.com</a>
-  </p>
-</section>
+<p class="indent bodyText">
+  Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
+  <br>
+  The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
+  <br>
+  A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
+  <br>
+  Link to the website: <a href="https://glitchroom.com">glitchroom.com</a>
+</p>
 
 <img src="img/glitch-room/2b.png" alt="Glitch Room by Nora Zhao">
 <img src="img/glitch-room/3b.png" alt="Glitch Room by Nora Zhao">
@@ -49,21 +46,16 @@
 <h6 class="imgDescription">Screenshots of 3D models in VR view.</h6>
 </main>
 
-<!-- <h6 class="en" 
-    style="text-align: right; margin-left: 34vw; margin-right: 1.5vmax; margin-top: 20vh;">
-  2020 All Rights Reserved. Design and Code by Nora Zhao.
-</h6> -->
-
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="weather-sphere.html"> <!-- change link -->
+  <a href="weather-sphere.html">
     <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("weather-sphere.html main"); // change link
+      $("#nextPage").load("weather-sphere.html main");
     });
   </script>
 </div>
