--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       margin-bottom: 0;
     }
   </style>
-  <section class="pageTop">
-    <p class="en">I'm a designer working across the areas of generative design, branding and conventional graphic design. Site coming soon...</p>
-  </section>
-</div>
+<p class="indent headerText">
+  I'm a designer working across the areas of generative design, branding and conventional graphic design. Site coming soon...
+</p>
 
 <!-- <div style="z-index: 5; position: absolute; bottom:0.5vmax; left: 50%; transform: translate(-50%,0); width: 2vmax;">
   <img src="img/icon/scroll-down.svg" alt="">
