--- a/omdia.html
+++ b/omdia.html
@@ -17,9 +17,10 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p>Brand identity framework for a global technology research powerhouse.<p>
-</section>
+<!-- write project summary-->
+<p class="indent headerText">
+  Brand identity framework for a global technology research powerhouse.
+</p>
 
 <h1>Omdia</h1>
 
@@ -29,12 +30,11 @@
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
-<section>
-  <!-- write body text -->
-  <p class="text">
-    Established in 2019 with the combination of the Informa Tech’s research brands (Ovum, Heavy Reading, and Tractica) and the acquired IHS Markit technology research portfolio, Omdia combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media, and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
-  </p>
-</section>
+<!-- write body text -->
+<p class="indent bodyText">
+  Established in 2019 with the combination of the Informa Tech’s research brands (Ovum, Heavy Reading, and Tractica) and the acquired IHS Markit technology research portfolio, Omdia combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media, and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
+</p>
+
 
 </main>
 
