--- a/peacebird.html
+++ b/peacebird.html
@@ -17,9 +17,9 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p>A refreshed visual identity for one of the best selling Chinese fashion brands.<p>
-</section>
+<p class="indent headerText">
+  A refreshed visual identity for one of the best selling Chinese fashion brands.
+<p>
 
 <h1>Peacebird</h1>
 
@@ -35,11 +35,10 @@
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
-<section>
-  <p class="text">
-    While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
-  </p>
-</section>
+<p class="indent bodyText">
+  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
+</p>
+
 
 </main>
 
