--- a/rtw.html
+++ b/rtw.html
@@ -17,10 +17,11 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <!-- write project summary-->
-  <p>Brand identity for an apparel company that provides classical quality products with a reasonable price.<p>
-</section>
+<!-- write project summary-->
+<p class="indent headerText">
+  Brand identity for an apparel company that provides classical quality products with a reasonable price.
+</p>
+
 
 <!-- write project title -->
 <h1>RTW</h1>
@@ -31,11 +32,11 @@
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
-<section>
-  <!-- write body text -->
-  <p class="text">
-  </p>
-</section>
+<!-- write body text -->
+<p class="indent bodyText">
+</p>
+</main>
+
 
 </main>
 
