--- a/weather-sphere.html
+++ b/weather-sphere.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- write title -->
 <title>Weather Sphere</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
@@ -18,14 +17,12 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <!-- write project summary-->
-  <p>Visualisation of a city's live weather data in the form of a 3D sphere.<p>
-</section>
+<p class="indent headerText">
+  Visualisation of a city's live weather data in the form of a 3D sphere.
+</p>
 
 <h1>Weather Sphere</h1>
 
-<!-- place img -->
 <div class="iframeWrapper iframe60">
   <iframe src="page/weather-sphere.html"></iframe>
 </div>
@@ -33,12 +30,9 @@
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
-<section>
-  <!-- write body text -->
-  <p class="en text">
-  </p>
-</section>
-
+<!-- write body text -->
+<p class="indent bodyText">
+</p>
 </main>
 
 <div class="pageDivider"></div>
