--- a/navigation.html
+++ b/navigation.html
@@ -6,12 +6,12 @@
     position: fixed;
     top: 2vmax;
     left: 1.5vmax;
-    z-index: 5;
+    z-index: 4;
     cursor: pointer;
   }
 </style>
 <script type="text/javascript">
-  // open and close nav sidebar on click (ref link https://www.w3schools.com/howto/howto_js_sidenav.asp)
+  // open and close nav sidebar on click (ref https://www.w3schools.com/howto/howto_js_sidenav.asp)
   function openNav() {
     document.getElementById("sideNav").style.width = "32.5vmax";
   }
@@ -24,19 +24,18 @@
 
 
 
-<!-- back to home page ---------------------------------------- -->
-<h1 class="home"
-    style="margin: 0;
-           font-size: 2.2vmax;
-           line-height: 1;">
-    <a href="index-real.html">Nora Zhao</a>
-</h1>
-<style media="screen">
-  .home {
+<!-- home button ---------------------------------------- -->
+<p id="homeBtn" onclick="window.location.href='index-real.html';">NORA ZHAO</p>
+<style>
+  #homeBtn {
+    font-family: "gt-black", sans-serif;
+    font-size: 2.18vmax;
+    line-height: 2.3vmax; /* adjust this to make its bottom align with text on the right */
     position: fixed;
     top: 2vmax;
-    left: 4.6vmax;
-    z-index: 5;
+    left: 4.5vmax; /* make sapce for the menu icon */
+    z-index: 4;
+    cursor: pointer;
   }
 </style>
 
@@ -48,57 +47,30 @@
 <div id="sideNav">
   <nav>
     <img id="closeBtn" onclick="closeNav()" src="img/icon/close.svg" alt="Close">
+    <div style="margin-top: 2vh;"></div>
 
-    <!-- sidebar menu contents ---------------------------------------- -->
-    <div style="margin-top: 4vh;"></div>
-    <p>
-      <a href="index-real.html">home page</a>
-      <br>
-      <a href="about-and-contact.html">about and contact</a>
-    </p>
-
-    <p>CODING PROJECTS:
-      <br>
-      <a href="glitch-room.html">- glitch room</a>
-      <br>
-      <a href="weather-sphere.html">- weather sphere</a>
-      <br>
-      <a href="glitch-pattern.html">- glitch pattern</a>
-      <br>
-      <a href="coordinate-converter.html">- coordinate converter</a>
-    </p>
-
-    <p>BRANDING PROJECTS:
-      <br>
-      <a href="rtw.html">- rtw</a>
-      <br>
-      <a href="omdia.html">- omdia</a>
-      <br>
-      <a href="peacebird.html">- peacebird</a>
-      <br>
-      <a href="byton.html">- byton</a>
-    </p>
-
-
-    <p>DESIGN PROJECTS:
-      <br>
-      <a href="chinese-grid.html">- chinese grid</a>
-    </p>
-
-    <p>OTHER:</p>
+    <p><a href="index-real.html">Home Page</a></p>
+    <p><a href="about-and-contact.html">About and Contact</a></p>
+    <br>
+    <p class="type">Coding Projects:</p>
+    <p><a href="glitch-room.html">- Glitch Room</a></p>
+    <p><a href="weather-sphere.html">- Weather Sphere</a></p>
+    <p><a href="glitch-pattern.html">- Glitch Pattern</a></p>
+    <p><a href="coordinate-converter.html">- Coordinate Converter</a></p>
+    <br>
+    <p class="type">Branding Projects:</p>
+    <p><a href="rtw.html">- RTW</a></p>
+    <p><a href="omdia.html">- Omdia</a></p>
+    <p><a href="peacebird.html">- Peacebird</a></p>
+    <p><a href="byton.html">- Byton</a></p>
+    <br>
+    <p class="type">Design Projects:</p>
+    <p><a href="chinese-grid.html">- Chinese Grid</a></p>
+    <br>
+    <p class="type">Other:</p>
   </nav>
 </div>
-<style media="screen">
-  nav {
-    margin: 2vmax 1.5vmax; /* nav contents margin */
-  }
-  nav a {
-    padding-left: 2vw;
-  }
-  #closeBtn {
-    width: 2vmax;
-    cursor: pointer;
-  }
+<style>
   #sideNav {
     height: 100%; /* 100% full-height */
     width: 0; /* 0 width - change this with JavaScript */
@@ -110,10 +82,12 @@
     overflow-x: hidden; /* disable horizontal scroll */
     transition: 0.3s; /* 0.x second transition effect to slide in the sidenav */
   }
-  .projectIcon {
-    width: 1.5vmax;
-    float: left;
-    margin: 0.5vmax 1vmax 0 0;
+  nav {
+    margin: 2vmax 1.5vmax; /* nav contents margin */
+  }
+  #closeBtn {
+    width: 2vmax;
+    cursor: pointer;
   }
   nav a:hover {
     color: blueviolet;
@@ -121,9 +95,14 @@
   nav a.active{
     text-decoration: line-through blueviolet;
   }
+  .type {
+    text-transform: uppercase;
+    opacity: 0.55;
+  }
 </style>
 <script type="text/javascript">
-  $("#sideNav a").filter(function() { // add "active" class to the current link (ref https://stackoverflow.com/a/13349151/11975753)
+  // add "active" class to the current link (ref https://stackoverflow.com/a/13349151/11975753)
+  $("#sideNav a").filter(function() {
       return this.href == location.href.replace(/#.*/, "");
   }).addClass("active");
 </script>
