font size made responsive with min size

--- a/index-real.html
+++ b/index-real.html
@@ -20,7 +20,7 @@
 <!-- header text -->
 <div style="z-index: 1; position: absolute; background-color: white; width: 100%;">
   <p class="indent headerText">
-    I'm a designer working across the areas of generative design, branding and conventional graphic design.
+    I'm an artist and designer working across the areas of generative art, branding and conventional graphic design.
   </p>
 </div>
 
@@ -199,7 +199,6 @@
       padding: 0 1vmax;
     }
   </style>
-
   <div class="card" onclick="window.location.href='glitch-room.html';">
     <div class="imgHolder">
       <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
