--- a/navigation.html
+++ b/navigation.html
@@ -2,7 +2,7 @@
 <img id="menuBtn" onclick="openNav()" src="img/icon/menu.svg" alt="Menu">
 <style media="screen">
   #menuBtn {
-    width: 2vmax;
+    width: calc(10px + .8vw + .8vh);
     position: fixed;
     top: 2vmax;
     left: 1.5vmax;
@@ -25,18 +25,28 @@
 
 
 <!-- home button ---------------------------------------- -->
-<p id="homeBtn" onclick="window.location.href='index-real.html';">NORA ZHAO</p>
+<!-- <p id="homeBtn" onclick="window.location.href='index-real.html';">NORA ZHAO</p> -->
+<img id="homeBtn" onclick="window.location.href='index-real.html';" src="img/icon/norazhao.svg" alt="Home">
+
 <style>
-  #homeBtn {
-    font-family: "gt-black", sans-serif;
-    font-size: 2.18vmax;
-    line-height: 2.3vmax; /* adjust this to make its bottom align with text on the right */
+    #homeBtn {
+    width: calc((10px + .8vw + .8vh) * 6.5); /* menu btn width * 6.5 */
     position: fixed;
     top: 2vmax;
-    left: 4.5vmax; /* make sapce for the menu icon */
+    left: calc(2vmax + (10px + .8vw + .8vh) * 1.2); /* make space for the menu icon */
     z-index: 4;
     cursor: pointer;
   }
+
+  /* #homeBtn {
+    font-family: "gt-black", sans-serif;
+    font-size: calc((10px + .8vw + .8vh) * 1.07);
+    line-height: calc((10px + .8vw + .8vh) * 1.1);
+    top: 2vmax;
+    left: calc(2vmax + (10px + .8vw + .8vh) * 1.2);
+    z-index: 4;
+    cursor: pointer;
+  } */
 </style>
 
 
@@ -52,19 +62,19 @@
     <p><a href="index-real.html">Home Page</a></p>
     <p><a href="about-and-contact.html">About and Contact</a></p>
     <br>
-    <p class="type">Coding Projects:</p>
+    <p class="type">Digital:</p>
     <p><a href="glitch-room.html">- Glitch Room</a></p>
     <p><a href="weather-sphere.html">- Weather Sphere</a></p>
     <p><a href="glitch-pattern.html">- Glitch Pattern</a></p>
     <p><a href="coordinate-converter.html">- Coordinate Converter</a></p>
     <br>
-    <p class="type">Branding Projects:</p>
+    <p class="type">Corporate:</p>
     <p><a href="rtw.html">- RTW</a></p>
     <p><a href="omdia.html">- Omdia</a></p>
     <p><a href="peacebird.html">- Peacebird</a></p>
     <p><a href="byton.html">- Byton</a></p>
     <br>
-    <p class="type">Design Projects:</p>
+    <p class="type">Design:</p>
     <p><a href="chinese-grid.html">- Chinese Grid</a></p>
     <br>
     <p class="type">Other:</p>
