--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -11,46 +11,45 @@
 <body>
 <div id="navigation"></div>
 <script type="text/javascript">
-$(function() {
-  $("#navigation").load("navigation.html");
-});
+  $(function() {
+    $("#navigation").load("navigation.html");
+  });
 </script>
 
 <main>
-<section class="pageTop">
-  <p>For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
-</section>
+<p class="indent headerText">
+  For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.
+</p>
 
 <h1>About and Contact</h1>
 <img src="img/me.jpg" alt="">
 
-<section>
-  <p class="text">
-    My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
-    <br>
-    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
-  </p>
-</section>
+<p class="indent bodyText">
+  My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  <br>
+  I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
+</p>
 
-<section>
-  <p>
-    Email: norazhaodesign@gmail.com
-    <br>
-    Mobile: +86 132 6007 1686
-    <!-- <br>
-    Wechat: leonorao
-    <br>
-    Instagram: norazhaodesign
-    <br>
-    Linkedin: norazhaodesign -->
-  </p>
-</section>
+<p class="indent">
+  Email: norazhaodesign@gmail.com
+  <br>
+  Mobile: +86 132 6007 1686
+  <!-- <br>
+  Wechat: leonorao
+  <br>
+  Instagram: norazhaodesign
+  <br>
+  Linkedin: norazhaodesign -->
+</p>
+</main>
+
+<div class="pageDivider"></div>
 
 <div id="footer"></div>
 <script type="text/javascript">
-$(function() {
-  $("#footer").load("footer.html");
-});
+  $(function() {
+    $("#footer").load("footer.html");
+  });
 </script>
 </body>
 </html>
