--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -61,13 +61,13 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="coordinate-converter.html">
+  <a href="rtw.html">
     <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("coordinate-converter.html main");
+      $("#nextPage").load("rtw.html main");
     });
   </script>
 </div>
