--- a/glitch-room.html
+++ b/glitch-room.html
@@ -49,13 +49,13 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="weather-sphere.html">
+  <a href="glitch-pattern.html">
     <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("weather-sphere.html main");
+      $("#nextPage").load("glitch-pattern.html main");
     });
   </script>
 </div>
