--- a/index-real.html
+++ b/index-real.html
@@ -20,7 +20,7 @@
 <!-- header text -->
 <div style="z-index: 1; position: absolute; background-color: white; width: 100%;">
   <p class="indent headerText">
-    I'm an artist and designer working across the areas of generative art, branding and conventional graphic design.
+    I'm an artist and designer practicing across the areas of generative art, branding and graphic design.
   </p>
 </div>
 
@@ -197,13 +197,13 @@
     </div>
   </div>
 
-  <div class="card" onclick="window.location.href='weather-sphere.html';">
+  <!-- <div class="card" onclick="window.location.href='weather-sphere.html';">
     <img src="img/weather-sphere/cover.jpg" alt="Weather Sphere by Nora Zhao">
     <div>
       <p>Weather Sphere</p>
       <h6>Visualisation of a city's live weather data in the form of a 3D sphere.</h6>
     </div>
-  </div>
+  </div> -->
 
   <div class="card" onclick="window.location.href='glitch-pattern.html';">
     <img src="img/glitch-pattern/cover.png" alt="Glitch Pattern by Nora Zhao">
@@ -213,13 +213,13 @@
     </div>
   </div>
 
-  <div class="card" onclick="window.location.href='coordinate-converter.html';">
+  <!-- <div class="card" onclick="window.location.href='coordinate-converter.html';">
     <img src="img/coordinate-converter/cover.jpg" alt="Coordinate Converter by Nora Zhao">
     <div>
       <p>Coordinate Converter</p>
       <h6>Exploration of pattern and movement thorough creative coding.</h6>
     </div>
-  </div>
+  </div> -->
 
   <div class="card" onclick="window.location.href='rtw.html';">
     <img src="img/rtw/cover.jpg" alt="RTW by Nora Zhao">
