--- a/navigation.html
+++ b/navigation.html
@@ -64,15 +64,15 @@
     <br>
     <p class="type">Digital:</p>
     <p><a href="glitch-room.html">- Glitch Room</a></p>
-    <p><a href="weather-sphere.html">- Weather Sphere</a></p>
+    <!-- <p><a href="weather-sphere.html">- Weather Sphere</a></p> -->
     <p><a href="glitch-pattern.html">- Glitch Pattern</a></p>
-    <p><a href="coordinate-converter.html">- Coordinate Converter</a></p>
+    <!-- <p><a href="coordinate-converter.html">- Coordinate Converter</a></p> -->
     <br>
     <p class="type">Corporate:</p>
     <p><a href="rtw.html">- RTW</a></p>
     <p><a href="omdia.html">- Omdia</a></p>
     <p><a href="peacebird.html">- Peacebird</a></p>
-    <p><a href="byton.html">- Byton</a></p>
+    <!-- <p><a href="byton.html">- Byton</a></p> -->
     <br>
     <p class="type">Design:</p>
     <p><a href="chinese-grid.html">- Chinese Grid</a></p>
