--- a/peacebird.html
+++ b/peacebird.html
@@ -45,13 +45,13 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="byton.html">
+  <a href="chinese-grid.html">
     <p class="en nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("byton.html main");
+      $("#nextPage").load("chinese-grid.html main");
     });
   </script>
 </div>
