--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -43,18 +43,18 @@
 <img src="img/glitch-pattern/4-2.png" alt="Glitch Pattern by Nora Zhao">
 <img src="img/glitch-pattern/4-3.png" alt="Glitch Pattern by Nora Zhao">
 
-<div class="grid3">
-  <img src="img/glitch-pattern/5-1.jpg" alt="Glitch Pattern by Nora Zhao">
-  <img src="img/glitch-pattern/5-2.jpg" alt="Glitch Pattern by Nora Zhao">
+<div class="grid3 gridxto1">
+  <img class="hideMobile" src="img/glitch-pattern/5-1.jpg" alt="Glitch Pattern by Nora Zhao">
+  <img class="hideMobile" src="img/glitch-pattern/5-2.jpg" alt="Glitch Pattern by Nora Zhao">
   <img src="img/glitch-pattern/5-3.jpg" alt="Glitch Pattern by Nora Zhao">
 </div>
 
-<div class="grid4 gridxto2">
+<!-- <div class="grid4 gridxto2">
   <img class="pixelated" src="img/glitch-pattern/6-1.png" alt="Glitch Pattern by Nora Zhao">
   <img class="pixelated" src="img/glitch-pattern/6-2.png" alt="Glitch Pattern by Nora Zhao">
   <img class="pixelated" src="img/glitch-pattern/6-3.png" alt="Glitch Pattern by Nora Zhao">
   <img class="pixelated" src="img/glitch-pattern/6-4.png" alt="Glitch Pattern by Nora Zhao">
-</div>
+</div> -->
 
 </main>
 
