--- a/glitch-room.html
+++ b/glitch-room.html
@@ -33,7 +33,7 @@
   <br>
   A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
   <br>
-  Link to the website: <a href="https://glitchroom.com">glitchroom.com</a>
+  Link to the website: <a href="https://glitchroom.com" target="_blank">glitchroom.com</a>
 </p>
 
 <img src="img/glitch-room/2b.png" alt="Glitch Room by Nora Zhao">
