--- a/index-real.html
+++ b/index-real.html
@@ -17,296 +17,28 @@
 </script>
 
 <main>
+  
 <!-- header text -->
-<div style="z-index: 1; position: absolute; background-color: white; width: 100%;">
+<div style="z-index: 1; display: block; position: absolute; background-color: white; width: 100%; ">
   <p class="indent headerText">
-    I'm an artist and designer practicing across the areas of generative art, branding and graphic design.
+    Artist and designer practicing across the areas of generative art, branding and graphic design.
   </p>
 </div>
 
-<!-- three.js code -->
-<div>
-  <script src="js/three.min.js"></script>
-  <style media="screen">
-  .text {
-    font-family: 'Roboto', sans-serif;
-    z-index: 1;
-    position: absolute;
-    bottom: 1%;
-    left: 0.4%;
-    right: 0.5%;
-    text-transform: uppercase;
-    font-size: 1.58vw;
-    text-align: center;
-    margin: auto;
-  }
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  </style>
-  <div id = "webgl"></div>
-  <script>
-    // scene
-    var scene = new THREE.Scene();
+<!-- main display -->
+<div id="display" style="display: block;"></div>
+<script type="text/javascript">
+  var myArray = [
+    "spheres.html",
+    "pixels.html"
+  ];
+  var randomUrl = myArray [Math.floor(Math.random() * myArray.length)];
 
-    // camera
-    var camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 0, 1);
-    camera.lookAt(new THREE.Vector3(0, 0, 0));
-
-    // define geometry
-    function getSphere(x, y, z) {
-      var geometry = new THREE.SphereGeometry(x, y, z);
-      var material = new THREE.MeshBasicMaterial({
-        color: 0xffffff,
-        transparent: true,
-        opacity: 1,
-        side: THREE.DoubleSide
-      });
-      var mesh = new THREE.Mesh(geometry, material);
-      return mesh;
-    }
-
-    // place geometry
-    var [obj1, obj2, obj3] = [getSphere(5, 6, 6), getSphere(5, 6, 6), getSphere(5, 6, 6)];
-
-    var group = new THREE.Group();
-    group.add(obj1, obj2, obj3);
-    group.position.set(0, 0, 0);
-    group.scale.set(1, 1, 1);
-
-    // initail rotation status
-    obj1.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
-    obj2.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
-    obj3.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
-
-    scene.add(group);
-
-    // render
-    var renderer = new THREE.WebGLRenderer({preserveDrawingBuffer: true});
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setClearColor('rgb(255, 255, 255)');
-    document.getElementById('webgl').appendChild(renderer.domElement);
-
-    // update
-    var clock = new THREE.Clock();
-
-    // bigger > rotation faster
-    var [n1, n2, n3, n4, n5, n6, n7, n8, n9] = [Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005];
-
-    var randomR1 = (Math.PI * 2) * Math.random();
-    var randomG1 = (Math.PI * 2) * Math.random();
-    var randomB1 = (Math.PI * 2) * Math.random();
-    var randomR2 = (Math.PI * 2) * Math.random();
-    var randomG2 = (Math.PI * 2) * Math.random();
-    var randomB2 = (Math.PI * 2) * Math.random();
-    var randomR3 = (Math.PI * 2) * Math.random();
-    var randomG3 = (Math.PI * 2) * Math.random();
-    var randomB3 = (Math.PI * 2) * Math.random();
-
-    // bigger > color change slower
-    var [t1, t2, t3, t4, t5, t6, t7, t8, t9] = [Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5];
-
-    var update = function() {
-
-      obj1.rotation.x -= n1; obj1.rotation.y += n2; obj1.rotation.z -= n3;
-      obj2.rotation.x += n4; obj2.rotation.y -= n5; obj2.rotation.z -= n6;
-      obj3.rotation.x -= n7; obj3.rotation.y += n8; obj3.rotation.z += n9;
-
-      var timeElapsed = clock.getElapsedTime();
-
-      // sound value to decide color brightness
-        var r1 = Math.floor((Math.sin(timeElapsed/t1 + randomR1) +1) /2 * 100 + 56);
-        var g1 = Math.floor((Math.sin(timeElapsed/t2 + randomG1) +1) /2 * 100 + 56);
-        var b1 = Math.floor((Math.sin(timeElapsed/t3 + randomB1) +1) /2 * 100 + 56);
-        obj1.material.color.set('rgb('+r1+','+g1+','+b1+')');
-
-        var r2 = Math.floor((Math.sin(timeElapsed/t4 + randomR2) +1) /2 * 156 + 100);
-        var g2 = Math.floor((Math.sin(timeElapsed/t5 + randomG2) +1) /2 * 156 + 100);
-        var b2 = Math.floor((Math.sin(timeElapsed/t6 + randomB2) +1) /2 * 156 + 100);
-        obj2.material.color.set('rgb('+r2+','+g2+','+b2+')');
-
-        var r3 = Math.floor((Math.sin(timeElapsed/t7 + randomR3) +1) /2 * 156 + 100);
-        var g3 = Math.floor((Math.sin(timeElapsed/t8 + randomG3) +1) /2 * 156 + 100);
-        var b3 = Math.floor((Math.sin(timeElapsed/t9 + randomB3) +1) /2 * 156 + 100);
-        obj3.material.color.set('rgb('+r3+','+g3+','+b3+')');
-
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.setPixelRatio(window.devicePixelRatio); // resolution for hd-dpi devices
-      renderer.render (scene, camera);
-      setTimeout( function() { requestAnimationFrame (function() {
-        update(scene, camera);
-      }) }, 1000 / 60 );
-    }
-
-    update();
-  </script>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-<style>
-  .cardGrid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1vmin;
-    padding-top: 2vmin;
-  }
-  .card {
-    border: 3px solid blueviolet;
-    position: relative;
-    width: 100%;
-  }
-  .onHover {
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-    height: 100%; width: 100%;
-    opacity: 0;
-  }
-  .card:hover .onHover {
-    opacity: 1;
-    transition: 1s ease;
-    background-color: lavender;
-  }
-  .card p {
-    color: blueviolet;
-    position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-  }
-</style>
-
-<h1>Digital:</h1>
-<div class="indent cardGrid">
-  <div class="card" onclick="window.location.href='glitch-room.html';">
-    <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
-    <div class="onHover">
-      <p>Glitch Room</p>
-    </div>
-  </div>
-
-  <div class="card" onclick="window.location.href='glitch-room.html';">
-    <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
-    <div class="onHover">
-      <p>Glitch Room</p>
-    </div>
-  </div>
-</div>
-
-
-
-
-<!-- project card -->
-<!-- <style>
-  .cardGrid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 2vmin;
-    padding-top: 2vmin;
-  }
-  .card {
-    border: 1px solid black;
-    border-radius: 0px;
-    cursor: pointer;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-  }
-  @media screen and (max-width: 500px) {
-    .card {
-      grid-template-columns: 1fr;
-    }
-  }
-  .card:hover {
-    border: 1px solid blueviolet;
-    background-color: lavender;
-    color: blueviolet;
-  }
-  .card p {
-    margin: 1vmax 0 0 0;
-    padding: 0 1vmax;
-  }
-  .card h6 {
-    margin: 0 0 1vmax 0;
-    padding: 0 1vmax;
-  }
-</style> -->
-
-<h1>Digital:</h1>
-<div class="indent cardGrid">
-  <div class="card" onclick="window.location.href='glitch-room.html';">
-    <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
-    <div>
-      <p>Glitch Room</p>
-      <h6>An interactive VR site which generates customised glitching patterns.</h6>
-    </div>
-  </div>
-
-  <div class="card" onclick="window.location.href='glitch-pattern.html';">
-    <img src="img/glitch-pattern/cover.png" alt="Glitch Pattern by Nora Zhao">
-    <div>
-      <p>Glitch Pattern</p>
-      <h6>Patterned images generated with the z-fighting glitch.</h6>
-    </div>
-  </div>
-</div>
-
-<h1>Corporate:</h1>
-<div class="indent cardGrid">
-  <div class="card" onclick="window.location.href='rtw.html';">
-    <img src="img/rtw/cover.jpg" alt="RTW by Nora Zhao">
-    <div>
-      <p>RTW</p>
-      <h6>Brand identity for an apparel company that provides classical quality products with a reasonable price.</h6>
-    </div>
-  </div>
-
-  <div class="card" onclick="window.location.href='omdia.html';">
-    <img src="img/omdia/cover.png" alt="Omdia by Nora Zhao">
-    <div>
-      <p>Omdia</p>
-      <h6>Brand identity framework for a global technology research powerhouse.</h6>
-    </div>
-  </div>
-
-  <div class="card" onclick="window.location.href='peacebird.html';">
-    <img src="img/peacebird/cover.png" alt="Peacebird by Nora Zhao">
-    <div>
-      <p>Peacebird</p>
-      <h6>A refreshed visual identity for one of the best selling Chinese fashion brands.</h6>
-    </div>
-  </div>
-</div>
-
-<h1>Design:</h1>
-<div class="indent cardGrid">
-  <div class="card" onclick="window.location.href='chinese-grid.html';">
-    <img src="img/chinese-grid/cover.png" alt="Chinese Grid by Nora Zhao">
-    <div>
-      <p>Chinese Grid</p>
-      <h6>A geometric grid system which generates Simplified Chinese characters in both square and circular styles.</h6>
-    </div>
-  </div>
-</div>
-
-<h1></h1>
+  $(function() {
+    $("#display").load("page/main/"+randomUrl+"");
+  });
+</script>
 </main>
-
-<footer class="indent">
-  <p>© 2020 Nora Zhao All Rights Reserved. Design and Code by Nora Zhao.</p>
-</footer>
 
 </body>
 </html>
