--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -18,7 +18,7 @@
 
 <main>
 <p class="indent headerText">
-  Patterned images generated with the z-fighting glitch.
+  Pattern images generated with z-fighting glitch.
 </p>
 
 <h1 class="en">Glitch Pattern</h1>
@@ -44,18 +44,6 @@
   <img src="img/glitch-pattern/4-2.png" alt="Glitch Pattern by Nora Zhao">
   <img src="img/glitch-pattern/4-3.png" alt="Glitch Pattern by Nora Zhao">
 </div>
-<div class="grid3">
-  <img src="img/glitch-pattern/5-1.jpg" alt="Glitch Pattern by Nora Zhao">
-  <img src="img/glitch-pattern/5-2.jpg" alt="Glitch Pattern by Nora Zhao">
-  <img src="img/glitch-pattern/5-3.jpg" alt="Glitch Pattern by Nora Zhao">
-</div>
-<div class="grid4 gridxto2">
-  <img class="pixelated" src="img/glitch-pattern/6-1.png" alt="Glitch Pattern by Nora Zhao">
-  <img class="pixelated" src="img/glitch-pattern/6-2.png" alt="Glitch Pattern by Nora Zhao">
-  <img class="pixelated" src="img/glitch-pattern/6-3.png" alt="Glitch Pattern by Nora Zhao">
-  <img class="pixelated" src="img/glitch-pattern/6-4.png" alt="Glitch Pattern by Nora Zhao">
-</div> -->
-
 </main>
 
 <div class="pageDivider"></div>
