--- a/glitch-room.html
+++ b/glitch-room.html
@@ -42,7 +42,7 @@
   <img src="img/glitch-room/4b.png" alt="Glitch Room by Nora Zhao">
   <img src="img/glitch-room/5b.png" alt="Glitch Room by Nora Zhao">
   <img src="img/glitch-room/6b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/7b.png" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/8-1b.png" alt="Glitch Room by Nora Zhao">
 </div>
 
 <h6 class="imgDescription">Screenshots of 3D models in VR view.</h6>
