--- a/index-real.html
+++ b/index-real.html
@@ -30,7 +30,8 @@
 <script type="text/javascript">
   var myArray = [
     "spheres.html",
-    "pixels.html"
+    "pixels.html",
+    "cuts.html"
   ];
   var randomUrl = myArray [Math.floor(Math.random() * myArray.length)];
 
