--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -22,7 +22,7 @@
 </p>
 
 <h1>About and Contact</h1>
-<img src="img/me.jpg" alt="">
+<img src="img/about/me.jpg" alt="">
 
 <p class="indent bodyText">
   My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
