--- a/index-real.html
+++ b/index-real.html
@@ -27,9 +27,9 @@
 <div id="display" style="display: block;"></div>
 <script type="text/javascript">
   var myArray = [
-    "spheres.html",
-    "pixels.html",
-    "cuts.html",
+    // "spheres.html",
+    // "pixels.html",
+    // "cuts.html",
     "center.html",
     "center-glitched.html"
   ];
