--- a/index-real.html
+++ b/index-real.html
@@ -31,7 +31,7 @@
     // "pixels.html",
     // "cuts.html",
     "center.html",
-    "center-glitched.html"
+    // "center-glitched.html"
   ];
   var randomUrl = myArray [Math.floor(Math.random() * myArray.length)];
 
