--- a/index-real.html
+++ b/index-real.html
@@ -37,7 +37,7 @@
 
 
 <!-- main display -->
-<div id="display" style="display: block;"></div>
+<div id="display"></div>
 <script type="text/javascript">
   var myArray = [
     // "spheres.html",
