--- a/index-real.html
+++ b/index-real.html
@@ -37,7 +37,7 @@
 
 
 <!-- main display -->
-<div id="display"></div>
+<iframe id="display"></iframe>
 <script type="text/javascript">
   var myArray = [
     // "spheres.html",
