--- a/index-real.html
+++ b/index-real.html
@@ -37,7 +37,7 @@
 
 
 <!-- main display -->
-<iframe id="display"></iframe>
+<canvas id="display"></canvas>
 <script type="text/javascript">
   var myArray = [
     // "spheres.html",
